# MCOM

./: CMakeLists.txt  readme.md
Core/: ProtocolHandler.cpp  ProtocolHandler.h  protocol.md
HardwareManager/: SerialManager.cpp  SerialManager.h
MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  waveformwindow.cpp  waveformwindow.h
Project/: serialwindow.cpp
Threads/: DataProcessorThread.cpp  DataProcessorThread.h  IOThread.cpp  IOThread.h  RecvThread.cpp  RecvThread.h  SendThread.cpp  SendThread.h
Waveform/: WaveformWidget.cpp  WaveformWidget.h  waveformwindow.cpp  waveformwindow.h
Widgets/: WaveformWidget.cpp  WaveformWidget.h
project/MCOM/: CMakeLists.txt  serialwindow.cpp  serialwindow.ui
project/MCOM/MCOM/: MCOM.pro  mainwindow.cpp  mainwindow.ui  serialwindow.cpp  serialwindow.h  serialwindow.ui
project/MCOM/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_serialwindow.h
project/MCOM/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
project/MCOM/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QComboBox.BE7EC372C8288656.idx  QMenuBar.BA96712A3D36B810.idx  QPushButton.A516753D45E588C3.idx  QSerialPort.B210BB472411A7E6.idx  QSerialPortInfo.7157BCE19DD6607E.idx  QStatusBar.730D0411DCF04A36.idx  QTextEdit.556479AAECD00391.idx  QVariant.A79371E8E273C314.idx  QWidget.66C24B009E0C1D1F.idx  QtDebug.0B99949BC48B0325.idx  alloc_traits.h.3DE9C77209A6F12A.idx  char_traits.h.E01D296588DA0DAE.idx  cmath.C44587E1737CC86B.idx  erase_if.h.5BA8B392975EBC82.idx  exp_integral.tcc.DF2E8D6218347DE3.idx  functional.BCE3EE2FB837DEC1.idx  main.cpp.B8CB4E28489F00E3.idx  mainwindow.cpp.D39DAE691F017EA4.idx  mainwindow.h.1EA135075CFBF1FE.idx  mainwindow.h.BA265E9FB1EF35EB.idx  qabstractbutton.h.1D4B98E6493BB3E4.idx  qabstractitemdelegate.h.3B42856965AFDC6D.idx  qabstractitemmodel.h.96B272AFE40CEE2A.idx  qabstractscrollarea.h.1CD5031BED6324F3.idx  qabstractslider.h.B802F7B56E2393B4.idx  qabstractspinbox.h.45520B052A91519F.idx  qaction.h.2877F6066B8AD278.idx  qalgorithms.h.68E47D9B722A8DFE.idx  qanystringview.h.6B6ABAC2CA640DC5.idx  qapplication.h.B0633ED80C6E255B.idx  qarraydata.h.A74EE4013B7BE4C5.idx  qarraydatapointer.h.FA432C3B81EDAEBC.idx  qatomic.h.493523D4AEAE3948.idx  qatomic_cxx11.h.B351BC703E4DEED6.idx  (+95 more)
project/MCOM/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_serialwindow.cpp
project/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
project/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-14cb40de57e7e1d5037c.json  cmakeFiles-v1-3326eb6bb12bd29d50c3.json  codemodel-v2-e3698b980556595d471c.json  directory-.-Debug-62ed2310e1a1abbc508d.json  index-2023-12-21T14-23-25-0398.json  target-MCOM-Debug-da7fb3b3892f9d49f79f.json
project/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-757afc0bf6d4ffa1a414.json  directory-.-Debug-a0526a730efc3cd2ddcc.json  index-2023-12-21T14-22-32-0220.json  target-MCOM-Debug-2dba5be5c30f1e8a6622.json  target-MCOM_autogen-Debug-375c6fa91d6969832032.json  target-MCOM_autogen_timestamp_deps-Debug-4941ab14d9fe8deeb9af.json
project/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
project/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QAbstractItemModel.AEFD91D08908455A.idx  QApplication.536EB946CE4415DC.idx  QMainWindow.26F0331F494C12EB.idx  QMenuBar.BA96712A3D36B810.idx  QPushButton.A516753D45E588C3.idx  QStatusBar.730D0411DCF04A36.idx  QVariant.A79371E8E273C314.idx  allocator.h.CDC420F8A204DB1D.idx  array.2D1B9C5D86048DBC.idx  auto_ptr.h.B2C4D73A7805467B.idx  basic_string.h.5FFA785B849B0B4E.idx  bessel_function.tcc.75805A51411C4346.idx  beta_function.tcc.9433CE8B0C33301A.idx  ell_integral.tcc.584A85E9CFC4D744.idx  gamma.tcc.37F76B6F36C8A315.idx  hashtable.h.70D0D1C94A005FF9.idx  hashtable_policy.h.7FE9FFE09D843FFA.idx  hypergeometric.tcc.516FAFC01A477D9D.idx  legendre_function.tcc.E9F72F75003403A2.idx  main.cpp.0F9BBF461C2D7194.idx  mainwindow.cpp.B851CD0C43561D48.idx  mainwindow.h.150E6AF2D3D330AA.idx  mainwindow.h.C2CDA70B738E0939.idx  modified_bessel_func.tcc.C6AB47A0C33452CF.idx  node_handle.h.0F0D91941F96EFD4.idx  optional.4214039576EDA6BB.idx  parse_numbers.h.2FBFA7EC6F28FE62.idx  poly_laguerre.tcc.2A277D85899AD1A0.idx  qabstractbutton.h.1D4B98E6493BB3E4.idx  qabstractitemmodel.h.96B272AFE40CEE2A.idx  qaction.h.2877F6066B8AD278.idx  qarraydataops.h.3355B996A3EF0076.idx  qbasicatomic.h.599E53ADA98F9166.idx  qbindingstorage.h.465FE2365CD389C7.idx  qbitmap.h.B15ED6A64975C0C7.idx  qbrush.h.D9CC0411096E1DDE.idx  qbytearray.h.578BAFAD56636B65.idx  qbytearrayalgorithms.h.57FE8DBAD90A1EC9.idx  qbytearrayview.h.4E61EE7161DA0523.idx  qchar.h.87D771ED739324D9.idx  (+68 more)
project/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/MCOM_autogen/: deps  mocs_compilation.cpp
project/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/MCOM_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_serialwindow.cpp  moc_serialwindow.cpp.d
project/build-MCOM-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/MCOM_autogen/include/: ui_mainwindow.h  ui_serialwindow.h
qcustomplot/: CMakeLists.txt
